# einsumpath-to-eT

./: README.md  pyproject.toml
einsumpath_to_eT/: blas_factory.py  einsum_to_eT.py  generate_omega_ccsd_b2_code.py
tests/: test_blas_factory.py  test_contraction_code.py  test_generate_eT_code_from_einsum.py  test_index_tools.py  test_tensors.py  test_utility_routines.py
